# citus

./: .codeclimate.yml  .codecov.yml  .editorconfig  .flake8  .gitattributes  .gitignore  .mergify.yml  .prettierignore  .prettierrc  .travis.yml  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  DEVCONTAINER.md  EXTENSION_COMPATIBILITY.md  META.json  Makefile  Makefile.global.in  NOTICE  PerformancePlan.md  README.md  STYLEGUIDE.md  aclocal.m4  appveyor.yml  array_fix.patch  autogen.sh  bench_citus_caching.py  bench_citus_caching.sh  bench_mixed.sql  bench_select.sql  cgmanifest.json  citus-14-release-blog-post.md  citus-14-release-blog-post_2.md  citus.control  configure  configure.ac  configure.in  configure~  cstore.c  cstore.h  (+44 more)
.circleci/: config.yml  continue-config.yml  docker_clone_volume.sh  local-execute  run_test.sh
.circleci/images/debbuilder/: Dockerfile
.circleci/images/extbuilder/: Dockerfile
.circleci/images/exttester/: .gitignore  Dockerfile
.devcontainer/: .gdbinit  .gitignore  .psqlrc  Dockerfile  Makefile  configure.flags  devcontainer.json  requirements.txt
.devcontainer/pgenv/config/: default.conf
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: packaging-request-checklist.md  release-checklist-template.md  template-reselase-checklist.md
.github/actions/configure/: action.yml
.github/actions/enable_core/: action.yml
.github/actions/install_extension/: action.yml
.github/actions/parallelization/: action.yml
.github/actions/save_logs_and_results/: action.yml
.github/actions/save_regressions/: action.yml
.github/actions/setup_extension/: action.yml
.github/actions/stack_trace/: action.yml
.github/actions/upload_coverage/: action.yml
.github/packaging/: packaging_ignore.yml  validate_build_output.sh
.github/workflows/: build-and-test-pg-master.yml  build_and_test.yml  c-cpp.yml  codeql.yml  compatibility-check.yml  devcontainer.yml  flaky_test_debugging.yml  merge-to-enterprise.yml  packaging-test-pipelines.yml  promote-automerges.yml  run_tests.yml  sqlancer-test-pipelines.yml
.paw/work/prepared-stmts-poc/: CodeResearch.md  Docs.md  ImplementationPlan.md  ResearchQuestions.md  Spec.md  SpecResearch.md  WorkflowContext.md
bench_scripts/: ab_test.sh  insert.sql  mixed.sql  run_bench.sh  run_bench_c32.sh  run_bench_long.sh  select.sql  update.sql
ci/: README.md  banned.h.sh  build-citus.sh  check-backward-compatibility.py  check_all_ci_scripts_are_run.sh  check_all_tests_are_run.sh  check_enterprise_merge.sh  check_gucs_are_alphabetically_sorted.sh  check_gucs_order.py  check_migration_files.sh  check_sql_snapshots.sh  ci_helpers.sh  disallow_c_comments_in_migrations.sh  disallow_hash_comments_in_spec_files.sh  disallow_long_changelog_entries.sh  editorconfig.sh  fix_gitignore.sh  fix_style.sh  gucs.out  include-grouping.py  include_grouping.py  normalize_expected.sh  print_stack_trace.sh  remove_useless_declarations.sh  sort_and_group_includes.sh  tests_all_in_schedule.sh
config/: config.guess  general.m4
docker/: Dockerfile  build_citus_debs  install-isolation.mk
expected/: am_block_filtering.out  am_copyto.out  am_create.out  am_data_types.out  am_drop.out  am_functions.out  am_insert.out  am_load.out  am_query.out  am_truncate.out  am_vacuum.out  am_vacuum_vs_insert.out  clean.out  drop.out  fdw_drop.out  fdw_truncate.out  truncate.out
input/: am_block_filtering.source  am_copyto.source  am_create.source  am_load.source  block_filtering.source  copyto.source  create.source  data_types.source  fdw_create.source
output/: am_block_filtering.source  am_copyto.source  am_create.source  am_data_types.source  am_load.source  block_filtering.source  copyto.source  create.source  data_types.source  fdw_block_filtering.source  fdw_create.source
specs/: am_vacuum_vs_insert.spec  am_write_concurrency.spec  create.spec
sql/: alter.sql  am_alter.sql  am_block_filtering.sql  am_copyto.sql  am_create.sql  am_data_types.sql  am_drop.sql  am_functions.sql  am_insert.sql  am_load.sql  am_query.sql  am_truncate.sql  am_vacuum.sql  clean.sql  drop.sql  fdw_drop.sql  fdw_truncate.sql  truncate.sql
src/backend/columnar/: .gitattributes  .gitignore  META.json  Makefile  README.md  TODO.md  citus_columnar--11.0-2.sql  citus_columnar.control  columnar.c  columnar.control  columnar_compression.c  columnar_customscan.c  columnar_debug.c  columnar_metadata.c  columnar_metadata_tables.c  columnar_metadata_writer.c  columnar_reader.c  columnar_storage.c  columnar_tableam.c  columnar_wal.c  columnar_writer.c  cstore.c  cstore.h  cstore_compression.c  cstore_customscan.c  cstore_debug.c  cstore_fdw--1.2--1.3.sql  cstore_fdw--1.4--1.5.sql  cstore_fdw--1.5--1.6.sql  cstore_fdw--1.7--1.8.sql  cstore_fdw--1.7.sql  cstore_fdw.c  cstore_fdw.control  cstore_metadata_tables.c  cstore_reader.c  cstore_tableam.c  cstore_writer.c  mem_primitives_lib.c  memcpy_s.c  mod.c  (+6 more)
src/backend/common/: safeclib
src/backend/distributed/: -.d  .gitignore  =abc  Makefile  README.md  citus----7.4-1.sql  citus----8.3-1.sql  citus----8.4-1.sql  citus--10.1-1--10.2-1.sql  citus--11.0-2.control  citus--11.1-1.control  citus--11.1-2.control  citus--5.0--5.0-1.sql  citus--5.0-1--5.0-2.sql  citus--5.0-2--5.1-1.sql  citus--5.0.sql  citus--5.1-1--5.1-2.sql  citus--5.1-2--5.1-3.sql  citus--5.1-3--5.1-4.sql  citus--5.1-4--5.1-5.sql  citus--5.1-5--5.1-6.sql  citus--5.1-6--5.1-7.sql  citus--5.1-7--5.1-8.sql  citus--5.1-8--5.2-1.sql  citus--5.2-1--5.2-2.sql  citus--5.2-1--5.3-0.sql  citus--5.2-1--5.3-1.sql  citus--5.2-2--5.2-3.sql  citus--5.2-3--5.2-4.sql  citus--5.2-4--6.0-1.sql  citus--6.0-1--6.0-2.sql  citus--6.0-10--6.0-11.sql  citus--6.0-11--6.0-12.sql  citus--6.0-12--6.0-13.sql  citus--6.0-13--6.0-14.sql  citus--6.0-14--6.0-15.sql  citus--6.0-15--6.0-16.sql  citus--6.0-16--6.0-17.sql  citus--6.0-17--6.0-18.sql  (+87 more)
src/include/: .editorconfig  .gitignore  citus_config.h.in  citus_version.h.in  citusdb_config.h.in  pg_version_compat.h  pg_version_constants.h
windows/: Mkvcbuild-minimize.patch  Mkvcbuild.pm.patch
windows/include/: citus_version.h
(+4355 files in other folders)
